install/kind/ingress/ambassador/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  tls:
    - hosts:
      - app.example.com
      secretName: secret-tls-app-example-com
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: httpbin
          servicePort: 80
      - path: /bar
        backend:
          serviceName: httpbin
          servicePort: 80
